--- a/Second Increment/Car_Master_App_Wang/res/layout/station_list_view.xml
+++ b/Second Increment/Car_Master_App_Wang/res/layout/station_list_view.xml
@@ -9,21 +9,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
-            android:textSize="36sp"
-            android:textStyle="bold" />
+            android:textSize="30sp"
+            android:textStyle="bold" 
+            android:text=">>>>>" />
 		<TextView
             android:id="@+id/se"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
             android:layout_toLeftOf="@+id/regP"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:text="$" />
         <TextView
             android:id="@+id/regP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
             android:layout_alignParentRight="true"
+            android:layout_toLeftOf= "@+id/Station"
             android:textSize="24sp"
             android:textStyle="bold" />
 
