--- a/Second Increment/Car_Master_App_Wang/res/layout/activity_main.xml
+++ b/Second Increment/Car_Master_App_Wang/res/layout/activity_main.xml
@@ -1,62 +1,135 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    
     tools:context=".MainActivity" >
+
+
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="225dp"
+        android:src="@drawable/car_services" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="25dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:src="@drawable/car_recall" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="425dp"
+        android:src="@drawable/gas_station" />
+
+    
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="120dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:src="@drawable/car_price" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:layout_marginLeft="225dp"
+        android:layout_marginTop="120dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:src="@drawable/car_info" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/imageButton1"
+        android:layout_below="@+id/imageButton1"
+        android:layout_marginTop="11dp"
+        android:text="Car Value"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_marginLeft="11dp"
+        android:layout_toRightOf="@+id/imageButton5"
+        android:text="Car Detail"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/imageButton4"
+        android:layout_marginTop="13dp"
+        android:text="Car Recall"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_toRightOf="@+id/imageButton5"
+        android:text="Car Service"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageButton5"
+        android:layout_centerHorizontal="true"
+        android:text="Nearby Gas Station"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Car Master provide you 5 features for your car" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:text="Car Detail" />
+        android:layout_marginTop="99dp"
+        android:text="Car Master provide you 5 features for your" />
 
-    <Button
-        android:id="@+id/button2"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/button1"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="22dp"
-        android:text="Car Recall" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button3"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:text="Nearby services" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:text="Nearby Gas Station" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:text="Car price" />
+        android:layout_marginTop="1dp"
+        android:src="@drawable/car_master" />
 
 </RelativeLayout>
